--- a/_includes/themes/mark-reid/page.html
+++ b/_includes/themes/mark-reid/page.html
@@ -1,5 +1,5 @@
 <div id="page">
-<a class="ribbon" href="http://github.com/xyzzy-022/xyzzy" target="_blank"><img src="https://a248.e.akamai.net/assets.github.com/img/abad93f42020b733148435e2cd92ce15c542d320/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub"></a>
+<a class="ribbon" href="http://github.com/xyzzy-022/xyzzy" target="_blank"><img src="/images/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
 
 <h1 class="emphnext"><a href="{{ url }}">{{ page.title }}</a></h1>
 
