--- a/styles/xyzzy-022.css
+++ b/styles/xyzzy-022.css
@@ -66,7 +66,7 @@ h1, h2, h3, h4, h5, h6, .download * {
 
 .download .last-update {
   font-size: 10pt;
-  color: gray;
+  color: silver;
 }
 
 .screenshot {
